# Saxion-AWS-Chess-Game-Player

./: .gitignore  .gitlab-ci.yml  README.md  add_games.sh  chess.pgn  docker-compose.yml  dockerize.sh
backend/: .dockerignore  Dockerfile  app.py  database.py  main_tests.py  pyproject.toml
doc/: DOCUMENTATION_TEMP.md  Sources.md  Usage.md
frontend/: build.sh  index.html  package-lock.json  package.json
frontend/src/: App.svelte  app.css
frontend/src/js/: api.js
frontend/src/lib/: PGNViewer.svelte
infra/: id_rsa  id_rsa.pub  main.tf  variables.tf
infra/backend/: docker-compose.yml  user_data_b.sh
infra/database/: docker-compose.yml  user_data_db.sh
infra/frontend/: user_data_f.sh
