[tool.poetry]
name = "devops-backend"
version = "0.1.0"
description = "The backend of our chess application"
authors = ["Saxion"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-Cors = "^3.0.10"
Flask-SQLAlchemy = "^2.5.1"
PyMySQL = "^1.0.2"
cryptography = "^3.4.7"
Flask-Testing = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
